--- a/.github/workflows/py3createtorrent.yml
+++ b/.github/workflows/py3createtorrent.yml
@@ -5,33 +5,55 @@ on:
       - ".github/workflows/py3createtorrent.yml"
       
 env:
-  name: "Firefox Setup 88.0"
-  comment: "Firefox Setup 88.0 win64 by torrent-webseed-creator"
-  url: "https://download-installer.cdn.mozilla.net/pub/firefox/releases/88.0/win64/en-US/Firefox%20Setup%2088.0.exe"
-  file_name: "Firefox Setup 88.0.exe"
+  name: "EP9000-CUSA01073_00-RCPS400000000000_4.pkg" 
+  comment: "EP9000-CUSA01073_00-RCPS400000000000_4.pkg"
+  url: "http://gs2.ww.prod.dl.playstation.net/gs2/appkgo/prod/CUSA01073_00/2/f_124587cd15d63dda9395a6ff2c5ea26145a2a095cad75d458b05783e3c1f56c0/f/EP9000-CUSA01073_00-RCPS400000000000_4.pkg"
+  file_name: "EP9000-CUSA01073_00-RCPS400000000000_4.pkg"
   piece_size: 0 # 0 for automatic calculation, or use the recommended piece size on the README.md file
-  maximize_disk_space: false # Set to true if out of disk space
-  
+      
 jobs:
   create:
     runs-on: ubuntu-20.04
     steps:
-      - name: Maximize disk space
-        if: ${{ env.maximize_disk_space == 'true' }}
-        uses: easimon/maximize-build-space@v4
-        with:
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          
       - name: Install py3createtorrent
         run: sudo pip3 install py3createtorrent
         
       - name: Download file
-        run: aria2c -x 16 -o "$file_name" "$url"
+        run: wget -nv -O "$file_name" "$url"
         
       - name: Create torrent using py3createtorrent
-        run: py3createtorrent -p $piece_size -c "$comment" -o "${name}.torrent" --webseed "$url" "$file_name" # Tested on 1.0.0
+        run: py3createtorrent -p $piece_size -c "$comment" -o "${name}.torrent" --webseed "$url" "$file_name" # Tested on 1.0.0b2
+        
+      - name: Upload torrent file
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.name }}
+          path: ${{ env.name }}.torrent
+name: Create torrent using py3createtorrent
+on:
+  push:
+    paths:
+      - ".github/workflows/py3createtorrent.yml"
+      
+env:
+  name: "EP9000-CUSA01073_00-RCPS400000000000_4.pkg" 
+  comment: "EP9000-CUSA01073_00-RCPS400000000000_4.pkg"
+  url: "http://gs2.ww.prod.dl.playstation.net/gs2/appkgo/prod/CUSA01073_00/2/f_124587cd15d63dda9395a6ff2c5ea26145a2a095cad75d458b05783e3c1f56c0/f/EP9000-CUSA01073_00-RCPS400000000000_4.pkg"
+  file_name: "EP9000-CUSA01073_00-RCPS400000000000_4.pkg"
+  piece_size: 0 # 0 for automatic calculation, or use the recommended piece size on the README.md file
+      
+jobs:
+  create:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Install py3createtorrent
+        run: sudo pip3 install py3createtorrent
+        
+      - name: Download file
+        run: wget -nv -O "$file_name" "$url"
+        
+      - name: Create torrent using py3createtorrent
+        run: py3createtorrent -p $piece_size -c "$comment" -o "${name}.torrent" --webseed "$url" "$file_name" # Tested on 1.0.0b2
         
       - name: Upload torrent file
         uses: actions/upload-artifact@v2
