--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
-name: Create torrent
+name: Create torrent using mktorrent
 on:
   push:
-    branches:
-      - master 
+    paths:
+      - ".github/workflows/test.yml"
 
 env:
   url_1: "http://gs2.ww.prod.dl.playstation.net/gs2/appkgo/prod/CUSA01073_00/2/f_124587cd15d63dda9395a6ff2c5ea26145a2a095cad75d458b05783e3c1f56c0/f/EP9000-CUSA01073_00-RCPS400000000000_4.pkg"
