--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "EP0082-CUSA12089_00-SHADOWTOMBRAIDER-A0201-V0101_2.pkg"
-  comment: "EP0082-CUSA12089_00-SHADOWTOMBRAIDER-A0201-V0101_2.pkg"
-  url: "http://gs2.ww.prod.dl.playstation.net/gs2/ppkgo/prod/CUSA12089_00/24/f_6359469d8c29c53c0bfc6a141bab877fcc4add4f910b47b7bf00e37825a25593/f/EP0082-CUSA12089_00-SHADOWTOMBRAIDER-A0201-V0101_2.pkg"
-  file_name: "EP0082-CUSA12089_00-SHADOWTOMBRAIDER-A0201-V0101_2.pkg"
+  name: "RATATOUILLE_2007.Cima4U.mp4"
+  comment: "RATATOUILLE_2007.Cima4U.mp4"
+  url: "https://s66.uppboom.com:82/d/5zrun3rlbgeyf3tkayoip2akpbtkxlq5tzt6qkfytroiil4bbrwhlim5lmbgtri44dyiassv/RATATOUILLE_2007.Cima4U.mp4"
+  file_name: "RATATOUILLE_2007.Cima4U.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
