--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "Kronk's New Groove 2.mp4"
-  comment: "Kronk's New Groove 2.mp4"
-  url: "https://m1.uppboom.com:82/d/sfrxdabxbgeyf3tkp4onf3cpp7modyjlsh3cvc5i5k52dltem2mtyacgwudcpsbk53wigbjl/Kronk_s.New.Groove.2005_Cima4U.mp4"
-  file_name: "Kronk's New Groove 2.mp4"
+  name: "The Emperor's New Groove 1.mp4"
+  comment: "The Emperor's New Groove 1.mp4"
+  url: "https://s51.uppboom.com:82/d/t5rq5azxbgeyf3tkp4oi5lavnnxtlorn7nxnybcrs2u4s7egj3ykxk3qwq6m4a5kkkykwmvy/The.Emperor_s.New.Groove.2000_Cima4U.mp4"
+  file_name: "The Emperor's New Groove 1.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
