--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,9 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "EP9001-CUSA02168_00-GTSPORT000000000-A0166-V0100_13.pkg"
-  comment: "EP9001-CUSA02168_00-GTSPORT000000000-A0166-V0100_13.pkg"
-  url: "http://gs2.ww.prod.dl.playstation.net/gs2/ppkgo/prod/CUSA02168_00/91/f_471e306f3131bc70694978ace91b72e212136b61f0ffad3b34b44ca4bfe78e91/f/EP9001-CUSA02168_00-GTSPORT000000000-A0166-V0100_13.pkg"
-  file_name: "EP9001-CUSA02168_00-GTSPORT000000000-A0166-V0100_13.pkg"
+  name: "UP1018-CUSA00103_00-MADMAXTHEGAME001-A0106-V0100_0.pkg"
+  comment: "http://gs2.ww.prod.dl.playstation.net/gs2/ppkgo/prod/CUSA00103_00/7/f_7de92e4fe6dc19209b40361a19924fe3ae6797c486627b3fe5abb1ca9690fe61/f/UP1018-CUSA00103_00-MADMAXTHEGAME001-A0106-V0100_0.pkg"
+  file_name: "UP1018-CUSA00103_00-MADMAXTHEGAME001-A0106-V0100_0.pkg"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
