--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -7,7 +7,7 @@ on:
 env:
   name: "_AnimeZid.com_.The.Mitchells.vs.The.Machines.2021.NF.WEB-DL.1080.Dubbed.Ar.mp4"
   comment: "_AnimeZid.com_.The.Mitchells.vs.The.Machines.2021.NF.WEB-DL.1080.Dubbed.Ar.mp4"
-  url: "https://s59.uppboom.com:82/d/s5rt36b7bgeyf3tk4aoy3k2nndv5fv5zroitsrreb6n6cyi3j5l6fxj6netqie7s7fv3gwxy/_AnimeZid.com_.The.Mitchells.vs.The.Machines.2021.NF.WEB-DL.1080.Dubbed.Ar.mp4"
+  url: "https://drive.google.com/uc?export=download&id=1FCY2HvAhx97o2k5rM1z9Wlo7iZSelPGI"
   file_name: "_AnimeZid.com_.The.Mitchells.vs.The.Machines.2021.NF.WEB-DL.1080.Dubbed.Ar.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
