--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -7,7 +7,7 @@ on:
 env:
   name: "_AnimeZid.com_.The.Mitchells.vs.The.Machines.2021.NF.WEB-DL.1080.Dubbed.Ar.mp4"
   comment: "_AnimeZid.com_.The.Mitchells.vs.The.Machines.2021.NF.WEB-DL.1080.Dubbed.Ar.mp4"
-  url: "https://drive.google.com/uc?export=download&id=1FCY2HvAhx97o2k5rM1z9Wlo7iZSelPGI"
+  url: "https://doc-0c-3s-docs.googleusercontent.com/docs/securesc/rv7glar8hq5f1bg56o13p7u2o3lld76g/ep7bfl8uglckn2gp9q46260vo4b9bo4j/1636835400000/13703350687659623855/13703350687659623855/1FCY2HvAhx97o2k5rM1z9Wlo7iZSelPGI?e=download&authuser=0&nonce=as1r0l9gl4fhu&user=13703350687659623855&hash=3t5npti4s766eu1e5erklok32thujjh3"
   file_name: "_AnimeZid.com_.The.Mitchells.vs.The.Machines.2021.NF.WEB-DL.1080.Dubbed.Ar.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
