--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -7,7 +7,7 @@ on:
 env:
   name: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
   comment: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
-  url: "https://sm-18t-01.sama-share.com:182/d/2kwmueok3ryvlqgxtj4lqry43xhpqkv4zwjocqibobgg4au6xf3nbphv3uucgofyrchwkssa/Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
+  url: "https://a-3.1fichier.com/c77753471"
   file_name: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
