--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -7,7 +7,7 @@ on:
 env:
   name: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
   comment: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
-  url: "https://a-3.1fichier.com/c77753471"
+  url: "https://fs2.cdnrobot.xyz/2k43A/Mickey,.Donald,.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar.mp4?download_token=8ecd48aabfb04f5712d25a515b08eb0d6dd462107abaad00bd8e9ebabfe42a6f"
   file_name: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
