--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
-  comment: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
-  url: "https://fs2.cdnrobot.xyz/2k43A/Mickey,.Donald,.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar.mp4?download_token=8ecd48aabfb04f5712d25a515b08eb0d6dd462107abaad00bd8e9ebabfe42a6f"
-  file_name: "Mickey_.Donald_.Goofy.the.Three.Musketeers.2004.WEB-DL.1080.Dubbed.Ar_SamaUp.mp4"
+  name: "The.Three.Caballeros.1944.BluRay.x264.1080p.Dubbed.Ar_SamaUp.mp4"
+  comment: "The.Three.Caballeros.1944.BluRay.x264.1080p.Dubbed.Ar_SamaUp.mp4"
+  url: "https://sm-d4.samaup.org:182/d/z2wg2p6k3ryvlqgx4r4kotipsg5ubwbdqtiga4ibx33gq5pt3wnsmvqbwckdglhnrrf6blem/The.Three.Caballeros.1944.BluRay.x264.1080p.Dubbed.Ar_SamaUp.mp4"
+  file_name: "The.Three.Caballeros.1944.BluRay.x264.1080p.Dubbed.Ar_SamaUp.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
