--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "Ralph.Breaks.the.Internet.2018.BluRay.1080p.Dubbed.Ar.V2.mp4"
-  comment: "Ralph.Breaks.the.Internet.2018.BluRay.1080p.Dubbed.Ar.V2.mp4"
-  url: "https://f6.file-upload.download:183/d/quxpjqbpnlgpv7w7pc7y2gkoydvzty667tou6t324ix7ueiuyj4grceldxznyefd7yrrp3du/Ralph.Breaks.the.Internet.2018.BluRay.1080p.Dubbed.Ar.V2.mp4"
-  file_name: "Ralph.Breaks.the.Internet.2018.BluRay.1080p.Dubbed.Ar.V2.mp4"
+  name: "UP0134-CUSA26040_00-FIRSTCLASSTROUBL-A0102-V0100_1.pkg"
+  comment: "UP0134-CUSA26040_00-FIRSTCLASSTROUBL-A0102-V0100_1.pkg"
+  url: "http://gs2.ww.prod.dl.playstation.net/gs2/ppkgo/prod/CUSA26040_00/2/f_12941fe4d3b8f2eda553e96144ed55a9dc30a6486a8e4214241caf134a42a38b/f/UP0134-CUSA26040_00-FIRSTCLASSTROUBL-A0102-V0100_1.pkg"
+  file_name: "UP0134-CUSA26040_00-FIRSTCLASSTROUBL-A0102-V0100_1.pkg"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
