--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "UP0134-CUSA26040_00-FIRSTCLASSTROUBL_1.pkg"
-  comment: "UP0134-CUSA26040_00-FIRSTCLASSTROUBL_1.pkg"
-  url: "http://gs2.ww.prod.dl.playstation.net/gs2/appkgo/prod/CUSA26040_00/5/f_afa4b7dcda13950e4866c78e0c7fda1a71b7bcf9fb1adf887811549cb5da05b0/f/UP0134-CUSA26040_00-FIRSTCLASSTROUBL_1.pkg"
-  file_name: "UP0134-CUSA26040_00-FIRSTCLASSTROUBL_1.pkg"
+  name: "The.Three.Caballeros.1944.BluRay.x264.1080p.Dubbed.Ar_SamaUp.mp4"
+  comment: "The.Three.Caballeros.1944.BluRay.x264.1080p.Dubbed.Ar_SamaUp.mp4"
+  url: "https://sm-d4.samaup.org:182/d/z2wg2p6k3ryvlqgx4r4kotipsg5ubwbdqtiga4ibx33ddd4gy33hxr7b5e4fvdrxrwi6thij/The.Three.Caballeros.1944.BluRay.x264.1080p.Dubbed.Ar_SamaUp.mp4"
+  file_name: "The.Three.Caballeros.1944.BluRay.x264.1080p.Dubbed.Ar_SamaUp.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
