--- a/.github/workflows/torrenttools.yml
+++ b/.github/workflows/torrenttools.yml
@@ -5,9 +5,9 @@ on:
       - ".github/workflows/torrenttools.yml"
       
 env:
-  name: "Firefox Setup 88.0"
-  comment: "Firefox Setup 88.0 win64 by torrent-webseed-creator"
-  url: "https://download-installer.cdn.mozilla.net/pub/firefox/releases/88.0/win64/en-US/Firefox%20Setup%2088.0.exe"
+  name: "[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
+  comment: "[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
+  url: "https://cdn-130.anonfiles.com/Ha35E1n8x9/2bb583de-1642413892/[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
   file_name: "Firefox Setup 88.0.exe"
   piece_size: auto # auto for automatic calculation, or use the recommended piece size on the README.md file
   protocol_version: 1 # BitTorrent version 1, 2, or hybrid
