--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,7 +5,7 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
+  name: "file1"
   comment: "[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
   url: "https://cdn-130.anonfiles.com/Ha35E1n8x9/2bb583de-1642413892/[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
   file_name: "[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
