--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -6,9 +6,9 @@ on:
       
 env:
   name: "file1"
-  comment: "[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
-  url: "https://f1.file-upload.download:183/d/rmxakxrjnlgpv7w7eg75maswsdlcrj5csby4bjeyblz6z55bbgsrqua2ylmui4uke5fsbfhk/[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
-  file_name: "[AnimeZid.com].The.Swan.Princess.1994.BluRay.1080p.Dubbed.Ar.mp4"
+  comment: "[AnimeZid.com].Despicable.Me.3.2017.BluRay.1080.Dubbed.Ar.mp4"
+  url: "https://www61.uptobox.com/dl/67-kQt_OF-jVVx79of_lLEjSLnTl4jN4GSzbMEqTVL5ciCDAc6E8k8BbBjIqwOJ6y4FBrR-M-voKnwEATAbDW1KtRYlj1xzKTPFd1m-onV6357yyHz5fdiMnBM--KymyXl6M4tJiJ6A89e4a-xx-sg/%5BAnimeZid.com%5D.Despicable.Me.3.2017.BluRay.1080.Dubbed.Ar.mp4"
+  file_name: "[AnimeZid.com].Despicable.Me.3.2017.BluRay.1080.Dubbed.Ar.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
