--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "file1"
-  comment: "[AnimeZid.com].Princess.Mononoke.1997.BluRay.1080p.Dubbed.Ar.mp4"
-  url: "https://fs4.cdnrobot.xyz/35gYn/[AnimeZid.com].Princess.Mononoke.1997.BluRay.1080p.Dubbed.Ar.mp4?download_token=4e086ddb4fcc52a6193fe8b584114dac9c2826fd835f64a264770e4f123281c3"
-  file_name: "[AnimeZid.com].Princess.Mononoke.1997.BluRay.1080p.Dubbed.Ar.mp4"
+  name: "UP0691-CUSA06676_00-ARKSEGAME0000000-A0276-V0100_17.pkg"
+  comment: "UP0691-CUSA06676_00-ARKSEGAME0000000-A0276-V0100_17.pkg"
+  url: "http://gs2.ww.prod.dl.playstation.net/gs2/ppkgo/prod/CUSA06676_00/246/f_aa7474483f338fae83386690b1da5de8a27e35bf43d8ca239819f3bfb7eae374/f/UP0691-CUSA06676_00-ARKSEGAME0000000-A0276-V0100_17.pkg"
+  file_name: "UP0691-CUSA06676_00-ARKSEGAME0000000-A0276-V0100_17.pkg"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
