--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "UP0691-CUSA06676_00-ARKSEGAME0000000-A0276-V0100_17.pkg"
-  comment: "UP0691-CUSA06676_00-ARKSEGAME0000000-A0276-V0100_17.pkg"
-  url: "http://gs2.ww.prod.dl.playstation.net/gs2/ppkgo/prod/CUSA06676_00/246/f_aa7474483f338fae83386690b1da5de8a27e35bf43d8ca239819f3bfb7eae374/f/UP0691-CUSA06676_00-ARKSEGAME0000000-A0276-V0100_17.pkg"
-  file_name: "UP0691-CUSA06676_00-ARKSEGAME0000000-A0276-V0100_17.pkg"
+  name: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
+  comment: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
+  url: "https://n32.cdnbom.org:82/d/enr6eaz3bgeyf3tk2eo5f3arnslttvj5xwjimjyws47qjjxqwomalkfdapzksr32aer2jxb3/_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
+  file_name: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
