--- a/.github/workflows/Testme.yml
+++ b/.github/workflows/Testme.yml
@@ -2,10 +2,10 @@ name: Create torrent using transmission
 on:
   push:
     paths:
-      - ".github/workflows/testme.yml"
+      - ".github/workflows/Testme.yml"
       
 env:
-  name: "33_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
+  name: "3AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
   comment: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
   url: "https://n32.cdnbom.org:82/d/enr6eaz3bgeyf3tk2eo5f3arnslttvj5xwjimjyws47qjjxqwomalkfdapzksr32aer2jxb3/_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
   file_name: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
