--- a/.github/workflows/mktorrent.yml
+++ b/.github/workflows/mktorrent.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/mktorrent.yml"
       
 env:
-  name: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
-  comment: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
-  url: "https://n32.cdnbom.org:82/d/enr6eaz3bgeyf3tk2eo5f3arnslttvj5xwjimjyws47qjjxqwomalkfdapzksr32aer2jxb3/_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
-  file_name: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
+  name: "ubuntu-22.04-desktop-amd64.iso"
+  comment: "ubuntu-22.04-desktop-amd64.iso"
+  url: "https://releases.ubuntu.com/22.04/ubuntu-22.04-desktop-amd64.iso?_ga=2.49117217.625552250.1659326943-759576510.1659080578"
+  file_name: "ubuntu-22.04-desktop-amd64.iso"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
