--- a/.github/workflows/Testme.yml
+++ b/.github/workflows/Testme.yml
@@ -5,10 +5,10 @@ on:
       - ".github/workflows/Testme.yml"
       
 env:
-  name: "3AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
-  comment: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
-  url: "https://n32.cdnbom.org:82/d/enr6eaz3bgeyf3tk2eo5f3arnslttvj5xwjimjyws47qjjxqwomalkfdapzksr32aer2jxb3/_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
-  file_name: "_AnimeZid.com_.Paddington.2014.BluRay.V2.1080p.Dubbed.Ar.mp4"
+  name: "Z55%201903.iso"
+  comment: "Z55%201903.iso"
+  url: "https://p-lux4.pcloud.com/cBZX7B1oWZgUHxNnZZZAPjrc7Z2ZZp9LZkZnsoT4JZVRZdHZSLZyLZiRZEzZDLZeLZPRZHLZR4ZW4ZzHZnRZ9H4bXZvPlJV5KYIGhC93kQGBJAw0NqAdDX/Z55%201903.iso"
+  file_name: "Z55%201903.iso"
   piece_size: 19 # Check the README.md for recommended piece size
   maximize_disk_space: false # Set to true if out of disk space
   
